Added interfaces and classes, needs unit tests

--- a/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
+++ b/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
@@ -11,4 +11,7 @@
         <PackageReference Condition="'$(TargetFramework)'=='netstandard1.3' or '$(TargetFramework)'=='net451'" Include="NETStandard.Library" Version="1.6.1" />
         <PackageReference Condition="'$(TargetFramework)'=='netstandard2.0' or '$(TargetFramework)'=='net461'" Include="NETStandard.Library" Version="2.0.0" />
     </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3' or '$(TargetFramework)'=='net451'">
+        <PackageReference Include="System.ValueTuple" Version="4.3.0" />
+    </ItemGroup>
 </Project>
