--- a/src/DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj
+++ b/src/DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj
@@ -5,7 +5,7 @@
     <ItemGroup>
         <PackageReference Include="Rocket.Surgery.Conventions.Abstractions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Rocket.Surgery.Builders.Abstractions" Version="$(RSG_Conventions_Version)" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(Microsoft_Extensions_Configuration_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
-
     </ItemGroup>
 </Project>
