--- a/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
+++ b/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
@@ -3,6 +3,7 @@
         <TargetFrameworks>netstandard1.3;net451;netstandard2.0;net461</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="../DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj" />
         <PackageReference Include="Rocket.Surgery.Builders.Abstractions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Rocket.Surgery.Conventions.Abstractions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(Microsoft_Extensions_Configuration_Version)" />
