--- a/Common.Build.props
+++ b/Common.Build.props
@@ -8,6 +8,7 @@
     <PropertyGroup>
         <RSG_Build_Version>1.1.0</RSG_Build_Version>
         <RSG_Conventions_Version>0.3.0</RSG_Conventions_Version>
+        <RSG_Hosting_Version>0.2.0</RSG_Hosting_Version>
         <Microsoft_Extensions_Configuration_Version>2.0.0</Microsoft_Extensions_Configuration_Version>
         <Microsoft_Extensions_DependencyInjection_Version>2.0.0</Microsoft_Extensions_DependencyInjection_Version>
         <Microsoft_Extensions_Hosting_Version>2.0.0</Microsoft_Extensions_Hosting_Version>
