--- a/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
+++ b/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
@@ -8,12 +8,12 @@
         <PackageReference Include="Rocket.Surgery.Conventions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+        <PackageReference Include="System.ValueTuple" Version="$(ValueTuple_Version)" />
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' or '$(TargetFramework)'=='net461'">
         <PackageReference Include="NETStandard.Library" Version="2.0.0" NoWarn="true" />
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3' or '$(TargetFramework)'=='net451'">
         <PackageReference Include="NETStandard.Library" Version="1.6.1" NoWarn="true" />
-        <PackageReference Include="System.ValueTuple" Version="4.3.0" />
     </ItemGroup>
 </Project>
