--- a/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
+++ b/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
@@ -4,7 +4,7 @@
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="../DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj" />
-        <PackageReference Include="Rocket.Surgery.Builders.Abstractions" Version="$(RSG_Conventions_Version)" />
+        <PackageReference Include="Rocket.Surgery.Builders.Abstractions" Version="$(RSG_Builders_Version)" />
         <PackageReference Include="Rocket.Surgery.Conventions.Abstractions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(Microsoft_Extensions_Configuration_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
