--- a/Common.Build.props
+++ b/Common.Build.props
@@ -13,6 +13,7 @@
         <Microsoft_Extensions_Configuration_Version>2.0.0</Microsoft_Extensions_Configuration_Version>
         <Microsoft_Extensions_DependencyInjection_Version>2.0.0</Microsoft_Extensions_DependencyInjection_Version>
         <Microsoft_Extensions_Hosting_Version>2.0.0</Microsoft_Extensions_Hosting_Version>
+        <Scrutor_Version>2.1.2</Scrutor_Version>
         <ValueTuple_Version>4.4.0</ValueTuple_Version>
         <SourceLink_Version>2.6.0</SourceLink_Version>
         <Microsoft_NET_Test_Sdk_Version>15.5.0</Microsoft_NET_Test_Sdk_Version>
