--- a/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
+++ b/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
@@ -8,7 +8,7 @@
         <PackageReference Include="Rocket.Surgery.Builders" Version="$(RSG_Builders_Version)" />
         <PackageReference Include="Rocket.Surgery.Conventions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="$(Autofac_Extensions_Version)" />
         <PackageReference Include="System.ValueTuple" Version="$(ValueTuple_Version)" />
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' or '$(TargetFramework)'=='net461'">
