--- a/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
+++ b/src/Autofac/Rocket.Surgery.Extensions.Autofac.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>netstandard1.3;net451;netstandard2.0;net461</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\Autofac.Abstractions\Rocket.Surgery.Extensions.Autofac.Abstractions.csproj" />
@@ -8,13 +8,7 @@
         <PackageReference Include="Rocket.Surgery.Builders" Version="$(RSG_Builders_Version)" />
         <PackageReference Include="Rocket.Surgery.Conventions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(Microsoft_Extensions_Logging_Version)" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="$(Autofac_Extensions_Version)" />
-        <PackageReference Include="System.ValueTuple" Version="$(ValueTuple_Version)" />
-    </ItemGroup>
-    <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' or '$(TargetFramework)'=='net461'">
-        <PackageReference Include="NETStandard.Library" Version="2.0.0" NoWarn="true" PrivateAssets="All" />
-    </ItemGroup>
-    <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3' or '$(TargetFramework)'=='net451'">
-        <PackageReference Include="NETStandard.Library" Version="1.6.1" NoWarn="true" PrivateAssets="All" />
     </ItemGroup>
 </Project>
