--- a/Common.Build.props
+++ b/Common.Build.props
@@ -8,12 +8,15 @@
     <PropertyGroup>
         <RSG_Build_Version>2.1.0</RSG_Build_Version>
         <RSG_Builders_Version>3.0.0</RSG_Builders_Version>
-        <RSG_Conventions_Version>0.11.0</RSG_Conventions_Version>
+        <RSG_Conventions_Version>0.12.2</RSG_Conventions_Version>
+        <RSG_Extensions_Version>0.8.2</RSG_Extensions_Version>
         <Microsoft_Extensions_Logging_Version>2.1.0</Microsoft_Extensions_Logging_Version>
         <Microsoft_Extensions_Hosting_Version>2.1.0</Microsoft_Extensions_Hosting_Version>
         <Microsoft_Extensions_Configuration_Version>2.1.0</Microsoft_Extensions_Configuration_Version>
         <Microsoft_Extensions_DependencyInjection_Version>2.1.0</Microsoft_Extensions_DependencyInjection_Version>
-		<Autofac_Version>4.8.1</Autofac_Version>
+        <Microsoft_Extensions_DiagnosticAdapter_Version>2.1.0</Microsoft_Extensions_DiagnosticAdapter_Version>
+        <System_Diagnostics_DiagnosticSource_Version>4.5.0</System_Diagnostics_DiagnosticSource_Version>
+		    <Autofac_Version>4.8.1</Autofac_Version>
         <Autofac_Extensions_Version>4.2.2</Autofac_Extensions_Version>
         <Scrutor_Version>2.2.2</Scrutor_Version>
         <SourceLink_Version>2.8.1</SourceLink_Version>
@@ -23,7 +26,7 @@
         <FakeItEasy_Version>4.6.0</FakeItEasy_Version>
         <Autofac_FakeItEasy_Version>5.0.0</Autofac_FakeItEasy_Version>
         <Bogus_Version>22.1.2</Bogus_Version>
-		<RSG_Testing_Version>0.5.0</RSG_Testing_Version>
+		    <RSG_Testing_Version>0.7.1</RSG_Testing_Version>
         <XunitXml_TestLogger_Version>2.0.0</XunitXml_TestLogger_Version>
     </PropertyGroup>
 </Project>
