--- a/src/DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj
+++ b/src/DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     </PropertyGroup>
@@ -8,5 +8,6 @@
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="$(Microsoft_Extensions_Hosting_Version)" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(Microsoft_Extensions_Configuration_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
+        <PackageReference Include="Scrutor" Version="$(Scrutor_Version)" />
     </ItemGroup>
 </Project>
