--- a/src/DependencyInjection/Rocket.Surgery.Extensions.DependencyInjection.csproj
+++ b/src/DependencyInjection/Rocket.Surgery.Extensions.DependencyInjection.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     </PropertyGroup>
@@ -8,6 +8,6 @@
         <PackageReference Include="Rocket.Surgery.Conventions" Version="$(RSG_Conventions_Version)" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(Microsoft_Extensions_DependencyInjection_Version)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(Microsoft_Extensions_Logging_Version)" />
-        <PackageReference Include="Scrutor" Version="$(Scrutor_Version)" />
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="$(System_Diagnostics_DiagnosticSource_Version)" />
     </ItemGroup>
 </Project>
