--- a/test/Directory.Build.targets
+++ b/test/Directory.Build.targets
@@ -1,19 +1,20 @@
 <Project>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(Microsoft_NET_Test_Sdk_Version)" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="$(xunit_Version)" />
-        <PackageReference Include="xunit" Version="$(xunit_Version)" />
-        <PackageReference Include="FluentAssertions" Version="$(FluentAssertions_Version)" />
-        <PackageReference Include="FakeItEasy" Version="$(FakeItEasy_Version)" />
-        <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="$(FakeItEasy_Version)" />
-        <PackageReference Include="Autofac.Extras.FakeItEasy" Version="$(Autofac_FakeItEasy_Version)" />
-        <PackageReference Include="Bogus" Version="$(Bogus_Version)" />
-		<PackageReference Include="Rocket.Surgery.Extensions.Testing" Version="$(RSG_Testing_Version)" />
-        <PackageReference Include="XunitXml.TestLogger" Version="$(XunitXml_TestLogger_Version)" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Include="xunit.runner.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(Microsoft_NET_Test_Sdk_Version)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(xunit_Version)" />
+    <PackageReference Include="xunit" Version="$(xunit_Version)" />
+    <PackageReference Include="FluentAssertions" Version="$(FluentAssertions_Version)" />
+    <PackageReference Include="FakeItEasy" Version="$(FakeItEasy_Version)" />
+    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="$(FakeItEasy_Version)" />
+    <PackageReference Include="Autofac.Extras.FakeItEasy" Version="$(Autofac_FakeItEasy_Version)" />
+    <PackageReference Include="Bogus" Version="$(Bogus_Version)" />
+    <PackageReference Include="Rocket.Surgery.Extensions.Testing" Version="$(RSG_Testing_Version)" />
+    <PackageReference Include="XunitXml.TestLogger" Version="$(XunitXml_TestLogger_Version)" />
+    <PackageReference Include="Rocket.Surgery.Reactive.Extensions" Version="$(RSG_Extensions_Version)" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
