--- a/src/DependencyInjection/Rocket.Surgery.Extensions.DependencyInjection.csproj
+++ b/src/DependencyInjection/Rocket.Surgery.Extensions.DependencyInjection.csproj
@@ -1,13 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\DependencyInjection.Abstractions\Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj" />
-        <PackageReference Include="Rocket.Surgery.Builders" />
-        <PackageReference Include="Rocket.Surgery.Conventions" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+        <PackageReference Include="Rocket.Surgery.Builders" />
+        <PackageReference Include="Rocket.Surgery.Conventions" />
         <PackageReference Include="System.Diagnostics.DiagnosticSource" />
     </ItemGroup>
 </Project>
