--- a/Common.Build.targets
+++ b/Common.Build.targets
@@ -1,33 +1,34 @@
 <Project>
     <ItemGroup>
-        <PackageReference Update="Autofac" Version="4.8.1" />
-        <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
+        <PackageReference Update="Autofac" Version="4.9.2" />
+        <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
         <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
         <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
         <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
         <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
         <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
-        <PackageReference Update="Rocket.Surgery.Builders" Version="3.2.1" />
-        <PackageReference Update="Rocket.Surgery.Builders.Abstractions" Version="3.2.1" />
-        <PackageReference Update="Rocket.Surgery.Conventions" Version="2.2.1" />
-        <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="2.2.1" />
+        <PackageReference Update="Rocket.Surgery.Builders" Version="4.0.0" />
+        <PackageReference Update="Rocket.Surgery.Builders.Abstractions" Version="4.0.0" />
+        <PackageReference Update="Rocket.Surgery.Conventions" Version="4.0.0" />
+        <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="4.0.0" />
         <PackageReference Update="Rocket.Surgery.Reactive.Extensions" Version="0.11.1" />
+        <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
         <PackageReference Update="Scrutor" Version="3.0.2" />
         <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Rocket.Surgery.Build.Metadata" Version="3.2.0" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19270-01" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Update="Rocket.Surgery.Extensions.Testing" Version="1.0.0" />
         <PackageReference Update="Autofac.Extras.FakeItEasy" Version="5.0.1" />
-        <PackageReference Update="Bogus" Version="25.0.4" />
-        <PackageReference Update="coverlet.msbuild" Version="2.5.1" />
-        <PackageReference Update="FakeItEasy" Version="5.0.1" />
-        <PackageReference Update="FakeItEasy.Analyzer.CSharp" Version="5.0.1" />
+        <PackageReference Update="Bogus" Version="27.0.1" />
+        <PackageReference Update="coverlet.msbuild" Version="2.6.1" />
+        <PackageReference Update="FakeItEasy" Version="5.1.1" />
+        <PackageReference Update="FakeItEasy.Analyzer.CSharp" Version="5.1.1" />
         <PackageReference Update="FluentAssertions" Version="5.6.0" />
-        <PackageReference Update="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+        <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.1.0" />
         <PackageReference Update="xunit" Version="2.4.1" />
         <PackageReference Update="xunit.runner.visualstudio" Version="2.4.1" />
         <PackageReference Update="XunitXml.TestLogger" Version="2.1.26" />
