--- a/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
+++ b/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
@@ -3,11 +3,11 @@
         <TargetFrameworks>netstandard2.0</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
-        <ProjectReference Include="../DependencyInjection.Abstractions/Rocket.Surgery.Extensions.DependencyInjection.Abstractions.csproj" />
         <PackageReference Include="Autofac" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
         <PackageReference Include="Rocket.Surgery.Builders.Abstractions" />
         <PackageReference Include="Rocket.Surgery.Conventions.Abstractions" />
+        <PackageReference Include="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" />
     </ItemGroup>
 </Project>
