Updated to latest packages with a breaking interface change +semver:major

--- a/Common.Build.targets
+++ b/Common.Build.targets
@@ -2,16 +2,16 @@
     <ItemGroup>
         <PackageReference Update="Autofac" Version="4.9.2" />
         <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-        <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
-        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
-        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
-        <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
-        <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
+        <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview5.19227.9" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview5.19227.9" />
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-preview5.19227.9" />
+        <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview5.19227.9" />
+        <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview5.19227.9" />
         <PackageReference Update="Rocket.Surgery.Builders" Version="4.0.0" />
         <PackageReference Update="Rocket.Surgery.Builders.Abstractions" Version="4.0.0" />
         <PackageReference Update="Rocket.Surgery.Conventions" Version="4.0.0" />
         <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="4.0.0" />
-        <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
+        <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="4.0.0" />
         <PackageReference Update="Scrutor" Version="3.0.2" />
         <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
     </ItemGroup>
