--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -18,11 +18,10 @@
     <ItemGroup>
         <PackageReference Update="Autofac" Version="4.9.2" />
         <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-        <PackageReference Update="Rocket.Surgery.Conventions" Version="5.0.0-PullRequest0003.*" />
-        <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="5.0.0-PullRequest0003.*" />
-        <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="5.0.0-PullRequest0001.*" />
+        <PackageReference Update="Rocket.Surgery.Conventions" Version="5.0.1" />
+        <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="5.0.1" />
+        <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Update="Scrutor" Version="3.0.2" />
-        <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Rocket.Surgery.Build.Metadata" Version="3.3.0" PrivateAssets="All" />
