--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -6,6 +6,7 @@
         <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
         <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
         <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="2.1.1" />
+        <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.0'">
         <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview5.19227.9" />
@@ -14,6 +15,7 @@
         <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview5.19227.9" />
         <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview5.19227.9" />
         <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview5.19227.9" />
+        <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-preview5.19224.8" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Update="Autofac" Version="4.9.2" />
