--- a/Packages.props
+++ b/Packages.props
@@ -10,8 +10,8 @@
   <ItemGroup>
     <PackageReference Update="Nuke.Common" Version="0.21.2" />
     <PackageReference Update="Rocket.Surgery.Nuke.DotNetCore" Version="0.3.5" />
-    <PackageReference Update="GitVersion.CommandLine.DotNetCore" Version="5.0.1-beta1.14" />
-    <PackageReference Update="ReportGenerator" Version="4.2.12" />
+    <PackageReference Update="GitVersion.CommandLine.DotNetCore" Version="5.0.1" />
+    <PackageReference Update="ReportGenerator" Version="4.2.15" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
@@ -23,21 +23,21 @@
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0' and '$(TargetFramework)'!='netcoreapp2.1'">
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-preview7.19362.9" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview8.19405.4" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview8.19405.4" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-preview8.19405.4" />
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview8.19405.4" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview8.19405.4" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview8.19405.4" />
+    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-preview8.19405.3" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Autofac" Version="4.9.3" />
     <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-    <PackageReference Update="Rocket.Surgery.Conventions" Version="7.0.0-beta.34" />
-    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="7.0.0-beta.34" />
-    <PackageReference Update="Rocket.Surgery.Hosting" Version="7.0.0-beta.34" />
-    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="7.0.0-beta.34" />
+    <PackageReference Update="Rocket.Surgery.Conventions" Version="7.0.1" />
+    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="7.0.1" />
+    <PackageReference Update="Rocket.Surgery.Hosting" Version="7.0.1" />
+    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="7.0.1" />
     <PackageReference Update="Scrutor" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
