--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,19 @@
 trigger:
+  batch: true
   branches:
     include:
       - master
       - refs/tags/*
+  paths:
+    exclude:
+    - '**/*.md'
+    - .appveyor.yml
+    - .codecov.yml
+    - .git*
+    - .editorconfig
+    - .nuke
+    - GitReleaseManager.yaml
+
 pr:
   autoCancel: true
   branches:
