--- a/src/Autofac.Conventions/Rocket.Surgery.Conventions.Autofac.csproj
+++ b/src/Autofac.Conventions/Rocket.Surgery.Conventions.Autofac.csproj
@@ -5,11 +5,14 @@
         <PackageTags>$(PackageTags);autofac</PackageTags>
     </PropertyGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Autofac.Abstractions\Rocket.Surgery.Extensions.Autofac.Abstractions.csproj" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
         <PackageReference Include="Rocket.Surgery.Conventions" />
         <PackageReference Include="System.Diagnostics.DiagnosticSource" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Autofac.Conventions.Abstractions\Rocket.Surgery.Conventions.Autofac.Abstractions.csproj" />
+      <ProjectReference Include="..\Autofac.Extensions\Rocket.Surgery.Extensions.Autofac.Extensions.csproj" />
     </ItemGroup>
 </Project>
